<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/signTrainerSolveQuestionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dip"
        android:layout_marginBottom="6dip"
        android:text="@string/solveQuestion" />


    <TextView
        android:id="@+id/signTrainerAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signTrainerSolveQuestionButton"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/answer"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/signTrainerMnemonic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signTrainerAnswer"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/trainerMnemonic"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/signTrainerLearningProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signTrainerMnemonic"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/learningProgress"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/signTrainerEasyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signTrainerLearningProgress"
        android:layout_marginBottom="6dip"
        android:layout_marginEnd="6dip"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginStart="6dip"
        android:layout_marginTop="6dip"
        android:layout_toLeftOf="@+id/signTrainerFairButton"
        android:text="@string/questionWasEasy" />

    <Button
        android:id="@+id/signTrainerFairButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signTrainerLearningProgress"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dip"
        android:layout_marginEnd="6dip"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginStart="6dip"
        android:layout_marginTop="6dip"
        android:text="@string/questionWasFair" />

    <Button
        android:id="@+id/signTrainerHardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signTrainerLearningProgress"
        android:layout_marginBottom="6dip"
        android:layout_marginEnd="6dip"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginStart="6dip"
        android:layout_marginTop="6dip"
        android:layout_toRightOf="@id/signTrainerFairButton"
        android:text="@string/questionWasHard" />

    <ProgressBar
        android:id="@+id/signTrainerVideoLoadingProgressBar"
        style="@android:style/Widget.ProgressBar.Large.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true" />
</RelativeLayout>